@@ -7,6 +7,7 @@ use warnings;
 use Class::Utils qw(set_params split_params);
 use Error::Pure qw(err);
 use List::Util qw(none);
+use Mo::utils::CSS 0.06 qw(check_css_unit);
 use Mo::utils::Language 0.05 qw(check_language_639_2);
 use Readonly;
 use Tags::HTML::Messages;
@@ -77,6 +78,8 @@ sub new {
 			err "Text for lang '$self->{'lang'}' and key '$req_text_key' doesn't exist.";
 		}
 	}
+
+	check_css_unit($self, 'width');
 
 	$self->{'_tags_messages'} = Tags::HTML::Messages->new(
 		'css' => $self->{'css'},
@@ -419,6 +422,14 @@ Returns undef.
  new():
          From Class::Utils::set_params():
                  Unknown parameter '%s'.
+         From Mo::utils::CSS::check_css_unit():
+                 Parameter 'width' doesn't contain number.
+                         Value: %s
+                 Parameter 'width' doesn't contain unit.
+                         Value: %s
+                 Parameter 'width' contain bad unit.
+                         Unit: %s
+                         Value: %s
          From Mo::utils::Language::check_language_639_2():
                  Parameter 'lang' doesn't contain valid ISO 639-2 code.
                          Codeset: %s
@@ -608,6 +619,7 @@ Returns undef.
 L<Class::Utils>,
 L<Error::Pure>,
 L<List::Util>,
+L<Mo::utils::CSS>,
 L<Mo::utils::Language>,
 L<Readonly>,
 L<Tags::HTML>,
