@@ -34,6 +34,7 @@ requires:
   Class::Utils: 0
   Error::Pure: 0
   List::Util: 1.33
+  Mo::utils::CSS: 0.06
   Mo::utils::Language: 0.05
   Readonly: 0
   Tags::HTML: 0.08
